noinst_LTLIBRARIES = libdupin.la

INCLUDES =

libdupin_la_SOURCES = \
	dupin.h \
	dupin_db.c \
	dupin_db.h \
	dupin_init.c \
	dupin_init.h \
	dupin_internal.h \
	dupin_webkit.c \
	dupin_webkit.h \
	dupin_view_engine.c \
	dupin_view_engine.h \
	dupin_record.c \
	dupin_record.h \
	dupin_utils.c \
	dupin_utils.h \
	dupin_date.c \
	dupin_date.h \
	dupin_view.c \
	dupin_view.h \
	dupin_view_record.c \
	dupin_view_record.h \
	dupin_attachment_db.c \
	dupin_attachment_db.h \
	dupin_attachment_record.c \
	dupin_attachment_record.h \
	dupin_linkb.c \
	dupin_linkb.h \
	dupin_link_record.c \
	dupin_link_record.h

libdupin_la_LIBADD =
