noinst_LTLIBRARIES = libtbjson.la

INCLUDES = \
	-DTBJSON_INTERNAL \
	-DTBCOMMON_INTERNAL

libtbjson_la_SOURCES = \
	tb_json.c \
	tb_json.h \
	tb_json_internal.h \
	tb_json_markup.c \
	tb_json_markup_internal.h \
	tb_keyvalue.c \
	tb_keyvalue.h \
	tb_scanner.c \
	tb_scanner.h \
	tb_scanner_internal.h
