noinst_LTLIBRARIES = libtbjsonpath.la

INCLUDES = -DTBJSONPATH_INTERNAL

libtbjsonpath_la_SOURCES = \
	tb_jsonpath.c \
	tb_jsonpath.h \
	tb_jsonpath_function.c \
	tb_jsonpath_function.h \
	tb_jsonpath_function_internal.h \
        tb_jsonpath_scanner.c \
        tb_jsonpath_scanner.h \
        tb_jsonpath_scanner_internal.h
